--- a/less/app.less
+++ b/less/app.less
@@ -1,5 +1,41 @@
-@base: #f938ab;
+@base: rgba(255, 255, 255, 0.8);
 
 body{
-  background-color: @base;
+  // background-color: @base;
+  background: url('/images/background.png');
+
+  #navigation{
+      background-color: rgba(150, 150, 150, 1);
+    .top-bar{
+      background-color: rgba(150, 150, 150, 1);
+    }
+  }
+  #main{
+    background: rgba(255, 255, 255, 0.5);
+    #about_pete{
+      // margin-left: -50px;
+      // margin-right: -50px;
+      // padding-left: 0;
+      // padding-right: -30;
+    }
+    #philosophy{
+      // margin-left: -50px;
+      // margin-right: -50px;
+      // padding-left: 0;
+      // padding-right: 0;
+    }
+    #headshot{
+      text-align: center;
+      // margin-left: 50px;
+      // margin-right: 50px;
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+  h4.heading{
+    text-align: right;
+  }
+
+
+
 }
