--- a/less/app.less
+++ b/less/app.less
@@ -16,19 +16,22 @@ body{
   background-repeat: no-repeat;
 
   #navigation{
-      background-color: rgba(150, 150, 150, 1);
+      background: rgba(255, 255, 255, 0.5);
+      // background-color: rgba(150, 150, 150, 1);
       height: 70px;
-    .top-bar{
-      background-color: rgba(150, 150, 150, 1);
-    }
+    // .top-bar{
+    //   background: rgba(255, 255, 255, 0.5);
+    //   // background-color: rgba(150, 150, 150, 1);
+    // }
     a{
       padding-top: 20px;
-      font-size: 4em;
+      font-size: 1em;
       font-weight: bold;
       color: pink;
     }
   }
   #main{
+    margin-top: 70px;
     background: rgba(255, 255, 255, 0.5);
     .heading{
       font-size: 3em;
@@ -46,15 +49,10 @@ body{
       }
     }
     #philosophy{
-      // margin-left: -50px;
-      // margin-right: -50px;
-      // padding-left: 0;
-      // padding-right: 0;
+
     }
     #headshot{
       text-align: center;
-      // margin-left: 50px;
-      // margin-right: 50px;
       padding-left: 0;
       padding-right: 0;
     }
@@ -69,6 +67,4 @@ body{
   footer p{
     font-size: 1.5em;
   }
-
-
 }
