--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -3,13 +3,14 @@ extends ../template/layout
 block content
   //Navigation
   #navigation.fixed.contain-to-grid
-    nav.top-bar(data-topbar='data-topbar')
+    nav
+      //.top-bar(data-topbar='data-topbar')
       ul.title-area
         //Title Area
         li.name
           h1
             a(href='#')
-              | petedunlap.com
+              | petedunlap.com -code like you mean it
   //End Top Bar
   #main.row
     .large-12.columns
@@ -46,7 +47,7 @@ block content
               hr
               .panel
                 h6.subheader
-                  | Having walked and biked the continental usa, taught physics in three and a half countries, Pete recently settled in the Nashville area where he has been studying computer science.
+                  | Having walked and biked the continental usa, taught physics in three and a half countries, I recently settled in the Nashville area where I have been studying computer science.
             //End Shows
             //Image
             #headshot.large-2.small-6.columns
