--- a/views/template/head.jade
+++ b/views/template/head.jade
@@ -5,4 +5,5 @@ head
   link(rel="stylesheet", href="/stylesheets/normalize.css")
   link(rel="stylesheet", href="/stylesheets/foundation.css")
   link(rel="stylesheet", href="/less/app.css")
+  link(rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico")
   script(src="/javascripts/vendor/custom.modernizr.js")
