changed href on orbit links to point to github

--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -19,18 +19,18 @@ block content
         .large-12.hide-for-small
           #featured(data-orbit='data-orbit', data-options="resume_on_mouseout: true; timer_speed: 3000;")
             //- data-orbit data-options="animation_speed:1500;"
-            a(href='http://fix_my_cat.petedunlap.com/', target='_blank')
-              img(src='/images/fix.png', alt='Grocery List Maker')
-            a(href='http://grocery_list_maker.petedunlap.com/', target='_blank')
+            a(href='https://github.com/peoplespete/FixMyCat/', target='_blank')
+              img(src='/images/fix.png', alt='Fix My Cat')
+            a(href='https://github.com/peoplespete/GroceryListMaker/', target='_blank')
               img(src='/images/grocery.png', alt='Grocery List Maker')
-            a(href='http://calendar.petedunlap.com/', target='_blank')
-              img(src='/images/calendar.png', alt='Grocery List Maker')
-            a(href='http://digital_droppings.petedunlap.com/', target='_blank')
-              img(src='/images/digital.png', alt='Grocery List Maker')
-            a(href='http://question_generator.petedunlap.com/', target='_blank')
-              img(src='/images/question.png', alt='Grocery List Maker')
-            a(href='http://memory.petedunlap.com/', target='_blank')
-              img(src='/images/memory.png', alt='Grocery List Maker')
+            a(href='https://github.com/peoplespete/Calendar/', target='_blank')
+              img(src='/images/calendar.png', alt='Calendar')
+            a(href='#', target='_blank')
+              img(src='/images/digital.png', alt='Digital Droppings')
+            a(href='https://github.com/peoplespete/QuestionGenerator/', target='_blank')
+              img(src='/images/question.png', alt='Question Generator')
+            a(href='https://github.com/peoplespete/Memory/', target='_blank')
+              img(src='/images/memory.png', alt='Memory')
       //End Content Slider
       //Mobile Header
       .row
