adjusting small screen visual layout

--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -18,14 +18,13 @@ block content
       .row
         .large-12.hide-for-small
           #featured(data-orbit='data-orbit', data-options="resume_on_mouseout: true; timer_speed: 3000;")
-            //- data-orbit data-options="animation_speed:1500;"
             a(href='https://github.com/peoplespete/FixMyCat/', target='_blank')
               img(src='/images/fix.png', alt='Fix My Cat')
             a(href='https://github.com/peoplespete/GroceryListMaker/', target='_blank')
               img(src='/images/grocery.png', alt='Grocery List Maker')
             a(href='https://github.com/peoplespete/Calendar/', target='_blank')
               img(src='/images/calendar.png', alt='Calendar')
-            a(href='#', target='_blank')
+            a(href='/digital_droppings', target='_blank')
               img(src='/images/digital.png', alt='Digital Droppings')
             a(href='https://github.com/peoplespete/QuestionGenerator/', target='_blank')
               img(src='/images/question.png', alt='Question Generator')
@@ -42,19 +41,19 @@ block content
         .large-12.columns
           .row
             //Shows
-            #about_pete.large-5.small-12.columns
+            #about_pete.large-5.small-4.columns
               h4.heading about pete
               hr
               .panel
                 h6.subheader
-                  | Having walked and biked the continental usa, taught physics in three and a half countries, I recently settled in the Nashville area where I have been studying computer science.
+                  | After walking and biking the continental usa, and teaching physics in 3 &frac12; countries, I settled in the Nashville area where I have been studying computer science.
             //End Shows
             //Image
-            #headshot.large-2.small-6.columns
+            #headshot.large-2.small-4.columns
               img(src='/images/headshot.png')
             //End Image
             //Feed
-            #philosophy.large-5.small-12.columns
+            #philosophy.large-5.small-4.columns
               h4.heading philosophy
               hr
               .panel
@@ -80,23 +79,4 @@ block content
                 li
                   a(href='mailto:petedunlap@gmail.com', target='_blank')
                     img(src='/images/gmail.png')
-  //-     //
-  //-        End Footer
-  //- script
-  //-   document.write('<script src=js/vendor/' +
-  //-   ('__proto__' in {} ? 'zepto' : 'jquery') +
-  //-   '.js><\\/script>')
-  //- script(src='js/foundation.min.js')
-  //- script
-  //-   $(document).foundation();
-  //- //
-  //-    End Footer
-
-  //- section#topBar
-  //-   .row
-  //-     .small-12.columns
-  //-       h1 yo i should have nav here
-  //- section#main
-  //-   .row
-  //-     .small-12.columns
-  //-       h2 stuff
+         //- End Footer
