adding google analytics

--- a/views/template/head.jade
+++ b/views/template/head.jade
@@ -7,3 +7,13 @@ head
   link(rel="stylesheet", href="/less/app.css")
   link(rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico")
   script(src="/javascripts/vendor/custom.modernizr.js")
+  script(type="text/javascript")
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-48385518-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
