--- a/views/template/layout.jade
+++ b/views/template/layout.jade
@@ -3,6 +3,8 @@ doctype html
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en">        <!--<![endif]-->
 include head
 body
+  include _nav
   block content
+  include _footer
   include scripts
 </html>
