filling out digital droppings page with content

--- a/less/app.less
+++ b/less/app.less
@@ -13,7 +13,7 @@ body{
 
   // background-color: @base;
   background: url('/images/background.png');
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
 
   header{
     display: none;
@@ -59,4 +59,23 @@ body{
   footer p{
     font-size: 1.5em;
   }
+}
+
+
+// digital_droppings
+
+#my_digital_droppings{
+  text-align: center;
+}
+
+.title{
+  margin-top: 20px;
+}
+
+.content_header{
+  text-align: center;
+}
+
+.center{
+  text-align: center;
 }
