--- a/views/digital_droppings/digital_droppings.jade
+++ b/views/digital_droppings/digital_droppings.jade
@@ -1,4 +1,76 @@
 extends ../template/layout
 
 block content
-  section#main.row
+  section
+    .row.main
+      .large-12.columns
+        .row
+          .large-3.columns
+          .large-6.large-offset-3.columns.panel.title
+            h1.heading#my_digital_droppings my digital droppings
+            h3.subheader Anyone who's ever been good at anything has made a few ugly things along the way.  This is a collection of my early attempts to make various technologies work for me.
+          .large-3.columns
+        //- soap
+        .row
+          .large-12.columns
+            hr
+            .large-6.columns
+              h3.heading.content_header Homemade Soap Project
+            .large-6.columns
+              h3.subheader.panel My wife and I made soap from oil and lye.  I created some logos in which the soap is trying to have some fun and by:dunlap always shows up to spoil it!
+          .large-4.columns
+            a(href="images/soap_hunting.png", target='_blank')
+              img(src="images/soap_hunting.png")
+          .large-4.columns
+            a(href="images/soap_swing.png", target='_blank')
+              img(src="images/soap_swing.png")
+          .large-4.columns
+            a(href="images/soap_wave.png", target='_blank')
+              img(src="images/soap_wave.png")
+        //- gradeatron
+        .row
+          .large-12.columns
+            hr
+            .large-6.columns
+              h3.heading.content_header Grade_a_tron3000
+            .large-6.columns
+              h3.subheader.panel Any honest teacher will tell you the most onerous part of their job is grading.  I built a program in Excel Visual Basic to do grade student responses.  It was later expanded into an Outlook VB app that had students use their phones as clickers.
+          .large-6.columns
+            a(href="images/Grade_a_tron3000_Instructions.pdf", target='_blank')
+              img(src="images/adobe_logo.gif")
+          .large-6.columns
+            a(href="images/Grade_a_tron3000.xlsm", target='_blank')
+              img(src="images/excel_logo.png")
+            //- img(src="images/soap_swing.png")
+        //- Tech Tip Emails and Videos
+        .row
+          .large-12.columns
+            hr
+            .large-6.columns
+              h3.heading.content_header Tech Tip
+              h3.heading.content_header Emails and Videos
+            .large-6.columns
+              h3.subheader.panel Creating tech tip emails and later videos was part of my most recent position, where I served as an instructional technology coach.
+          .large-4.columns.center
+            a(href="images/techtip7.pdf", target='_blank')
+              img(src="images/adobe_logo.gif")
+          .large-4.columns.center
+            a(href="images/Copying_Content_Between_Courses.swf", target='_blank')
+              img(src="images/swf.png")
+          .large-4.columns.center
+            a(href="images/Uploading_Multiple_Files_at_once_to_a_Course.swf", target='_blank')
+              img(src="images/swf.png")
+        //- Flash Simulations
+        .row
+          .large-12.columns
+            hr
+            .large-6.columns
+              h3.heading.content_header Flash Physics Simulations
+            .large-6.columns
+              h3.subheader.panel As a graduate student, I audited an Adobe Flash course and made some simulations for my students.
+          .large-6.columns.center
+            a(href="images/eggdrop_!!!.swf", target='_blank')
+              img(src="images/swf.png")
+          .large-6.columns.center
+            a(href="images/momentum_1D.swf", target='_blank')
+              img(src="images/swf.png")
