--- a/views/digital_droppings/digital_droppings.jade
+++ b/views/digital_droppings/digital_droppings.jade
@@ -1,4 +1,4 @@
-extends ../template/layout
+extends ../template/layout2
 
 block content
   section
@@ -35,10 +35,10 @@ block content
               h3.heading.content_header Grade_a_tron3000
             .large-6.columns
               h3.subheader.panel Any honest teacher will tell you the most onerous part of their job is grading.  I built a program in Excel Visual Basic to do grade student responses.  It was later expanded into an Outlook VB app that had students use their phones as clickers.
-          .large-6.columns
+          .large-6.columns.center
             a(href="images/Grade_a_tron3000_Instructions.pdf", target='_blank')
               img(src="images/adobe_logo.gif")
-          .large-6.columns
+          .large-6.columns.center
             a(href="images/Grade_a_tron3000.xlsm", target='_blank')
               img(src="images/excel_logo.png")
             //- img(src="images/soap_swing.png")
