adding tile in orbit for fooddump app

--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -11,6 +11,8 @@ block content
               img(src='/images/fix.png', alt='Fix My Cat')
             a(href='https://github.com/peoplespete/GroceryListMaker/', target='_blank')
               img(src='/images/grocery.png', alt='Grocery List Maker')
+            a(href='https://github.com/peoplespete/FoodDump/', target='_blank')
+              img(src='/images/food.png', alt='Food Dump')
             a(href='https://github.com/peoplespete/Calendar/', target='_blank')
               img(src='/images/calendar.png', alt='Calendar')
             a(href='/digital_droppings', target='_blank')
